handshaked play mode